--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,14 @@
     <color name="colorTwo">#283593</color>
     <color name="colorTree">#3f51b5</color>
     <color name="colorText">#f5f5f5</color>
-    <color name="colorBlue"> #3f51b5</color>
+    <color name="colorBlue">#3f51b5</color>
     <color name="colorBackground">#b0bec5</color>
     <color name="colorButton">#7986cb</color>
     <color name="colorFirstButton">#512da8</color>
+    <color name="red">#c62828</color>
+    <color name="s">#78909c</color>
+    <color name="v">#90caf9</color>
+    <color name="a">#1e88e5</color>
+
+
 </resources>
