--- a/app/src/main/res/layout/adapter_item.xml
+++ b/app/src/main/res/layout/adapter_item.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="206dp"
         card_view:cardBackgroundColor="@color/a"
+
         card_view:cardCornerRadius="10dp"
         card_view:cardElevation="5dp"
         card_view:cardUseCompatPadding="true">
@@ -29,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
                 android:paddingRight="16dp"
-                android:textColor="@color/colorText"
+                android:textColor="@color/red"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
